# esp32_sensorkit

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  main.c
main/accelerometer/: accelerometer.c  accelerometer.h
main/display/: display.c  display.h
main/http_server/: http_server.c  http_server.h
main/i2c_bus/: i2c_bus.c  i2c_bus.h
main/tasks/: tasks.c  tasks.h
main/th_sensor/: th_sensor.c  th_sensor.h
main/wifi_manager/: wifi_manager.c  wifi_manager.h
